--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "deploy": "gatsby build && cp CNAME public && gh-pages -d public"
   },
   "dependencies": {
+    "@fontsource/work-sans": "^4.5.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "babel-plugin-styled-components": "^1.13.2",
+    "date-fns": "^2.23.0",
     "gatsby": "^3.9.0",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^3.9.0",
-    "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.9.0",
     "gatsby-plugin-sitemap": "^4.5.0",
     "gatsby-plugin-styled-components": "^4.9.0",
